Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-65054

Widget application crashes when using the WebGL backend

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.10.1
    • 5.10.0
    • QPA: WebGL
    • None
    • ubuntu 16.04, Qt Creator 4.5
      Qt 5.10
    • a8cb5a70a962f7bc90caf51d34ad33603e30ff30

      I want to try out the webgl backend, but it fails with a crash:


      Thread 2 (Thread 0x7fffec953700 (LWP 23023)):
      #0 0x00007ffff559b70d in poll () at ../sysdeps/unix/syscall-template.S:84
      No locals.
      #1 0x00007ffff298538c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
      No symbol table info available.
      #2 0x00007ffff298549c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
      No symbol table info available.
      #3 0x00007ffff693cbcb in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/shiy/Qt/5.10.0/gcc_64/lib/libQt5Core.so.5
      No symbol table info available.
      #4 0x00007ffff68e726a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/shiy/Qt/5.10.0/gcc_64/lib/libQt5Core.so.5
      No symbol table info available.
      #5 0x00007ffff67116dc in QThread::exec() () from /home/shiy/Qt/5.10.0/gcc_64/lib/libQt5Core.so.5
      No symbol table info available.
      #6 0x00007ffff671660c in ?? () from /home/shiy/Qt/5.10.0/gcc_64/lib/libQt5Core.so.5
      No symbol table info available.
      #7 0x00007ffff61126ba in start_thread (arg=0x7fffec953700) at pthread_create.c:333
      __res = <optimized out>
      pd = 0x7fffec953700
      now = <optimized out>
      unwind_buf = {cancel_jmp_buf = jmp_buf = {140737162589952, -1539666456272979304, 0, 140737488346175, 140737162590656, 140737488346360, 1539624870751746712, 1539647926424943256}, mask_was_saved = 0, priv = {pad = {0x0, 0x0, 0x0, 0x0}, data = {prev = 0x0, cleanup = 0x0, canceltype = 0}}}
      not_first_call = <optimized out>
      pagesize_m1 = <optimized out>
      sp = <optimized out>
      freesize = <optimized out>
      _PRETTY_FUNCTION_ = "start_thread"
      #8 0x00007ffff55a73dd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109
      No locals.

      Thread 1 (Thread 0x7ffff7fbf780 (LWP 23018)):
      #0 0x00007ffff7188170 in QPlatformBackingStore::setBackingStore(QBackingStore*) () from /home/shiy/Qt/5.10.0/gcc_64/lib/libQt5Gui.so.5
      No symbol table info available.
      #1 0x00007ffff7728d01 in QWidgetPrivate::create_sys(unsigned long long, bool, bool) () from /home/shiy/Qt/5.10.0/gcc_64/lib/libQt5Widgets.so.5
      No symbol table info available.
      #2 0x00007ffff7728eb9 in QWidget::create(unsigned long long, bool, bool) () from /home/shiy/Qt/5.10.0/gcc_64/lib/libQt5Widgets.so.5
      No symbol table info available.
      #3 0x00007ffff7733919 in QWidget::setVisible(bool) () from /home/shiy/Qt/5.10.0/gcc_64/lib/libQt5Widgets.so.5
      No symbol table info available.
      #4 0x0000000000407bee in main (argc=1, argv=0x7fffffffe228) at ../menus/main.cpp:59
      app = <incomplete type>
      window = {<QMainWindow> = {<No data fields>}, static staticMetaObject = {d = {superdata = 0x7ffff7db30c0 <QMainWindow::staticMetaObject>, stringdata = 0x408720 <qt_meta_stringdata_MainWindow>, data = 0x4089c0 <qt_meta_data_MainWindow>, static_metacall = 0x407cc8 <MainWindow::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}}, fileMenu = 0x7149e0, editMenu = 0x714c30, formatMenu = 0x711e20, helpMenu = 0x7183e0, alignmentGroup = 0x716e40, newAct = 0x6dbbc0, openAct = 0x68eab0, saveAct = 0x6e3e80, printAct = 0x68e710, exitAct = 0x712860, undoAct = 0x715a90, redoAct = 0x68e6f0, cutAct = 0x719730, copyAct = 0x7156e0, pasteAct = 0x719b60, boldAct = 0x713710, italicAct = 0x7169a0, leftAlignAct = 0x718cb0, rightAlignAct = 0x713e00, justifyAct = 0x71a0e0, centerAct = 0x717260, setLineSpacingAct = 0x7125b0, setParagraphSpacingAct = 0x716a20, aboutAct = 0x7189f0, aboutQtAct = 0x711ea0, infoLabel = 0x68afa0}

      What I did was building Qt's examples, but passing -platform webgl when running.

      I just picked 2 examples within QtCreator, mainwindow and menus,

      And modify the run setting with the argument : -platform webgl

      but When I run the programs, it will crash with the above call stack.

        For Gerrit Dashboard: QTBUG-65054
        # Subject Branch Project Status CR V

            jefernan Jesus Fernandez
            billconan shi yan
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes