qCritical if the user creates a raster surface

Raster surfaces are not allowed due to performance problems. A
qCritical message is shown if the user tries to use the plugin in a
widget application.

[ChangeLog][QtWebGL] The application shows an error message when
trying to create a QBackingStore in an application.

Task-number: QTBUG-65054
Change-Id: I78bfd2b2714d7dce1f802b1864216655e2d74406
Reviewed-by: Edward Welbourne <edward.welbourne@qt.io>